infra/kube/overlays/prod/services-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-lb
  namespace: ingress-nginx
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.50
    metallb.universe.tf/allow-shared-ip: gitea
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: ssh-lb
  namespace: dev-tools
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.50
    metallb.universe.tf/allow-shared-ip: gitea
spec:
  ports:
    - port: 2222
      targetPort: 22
  selector:
    purpose: git
  type: LoadBalancer
