infra/kube/overlays/prod/services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-tools-ingress
  namespace: dev-tools
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gitea.jbernh.xyz
        - registry.jbernh.xyz
      secretName: tls-server
  rules:
    - host: gitea.jbernh.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
    - host: registry.jbernh.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
